# pyweb-hw-11

./: README.md  main.py  pyproject.toml
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/repository/: contacts.py
src/routes/: contacts.py
src/schemas/: contact.py
